Current branch 1.3.0 (2012-01-23)
	Project migrated to the latest Xcode version 4.2
	iOS Deployment target changed to 4.3

Version 1.2.3 (2011-11-26)
	Fix compiler bugs in template for Xcode4.2.

version 1.2.2 (2011-08-13)
	GesturesDemoView added to illustrate gesture recognizers.
	Isgl3dPODImporter: Fixed bug on loading non-mesh nodes
	ccBridge::AppDelegate: Fixed bug on event capturing.
	ActionsDemoView added to illustrate action animation.
	Isgl3dAction (and sub-classes): added as an alternative means of animating nodes.
	ShaderMaterialDemoView added to illustrate how to integrate custom ES2 shaders.
	Isgl3dShaderMaterial, Isgl3dCustomShader : Added to framework to allow custom OpenGL ES2 shaders to be more easily integrated.
	OpenGL ES2 generic shader bugs : fixed by Holger
	Isgl3dTextureMaterial: Add API to create textures from UIImages (thanks to Viktor)
	Isgl3dNode: added gesture recognizer api
	AntiAliasing using MSAA frame buffer implemented (Holger Wiedemann)
	Isgl3dGestureManager added: UIGestureRecognizer handling added to nodes (Holger Wiedemann)
	Isgl3dPVRLoader added: handles all PVR texture formats (Issue #1) (Holger Wiedemann)
	Bugs with OpenGL ES 2.0 (errors from textures) fixed (Issue #6) (Holger Wiedemann)
	Updated to PowerVR SDK 2.0.8
	Allow nodes from PODs to be reused any number of times on a scene 
	Added device auto-rotation handling

version 1.2.1 (2011-06-24)
	Isgl3dPODImporter: fix bug in Isgl3dPODImporter for models without UVs (Issue #5)
	Isgl3dParticleGenerator/Isgl3dParticlePath: Bug fixes (thanks to Massimiliano Rossi) 
	Isgl3dCamera: allow camera to be fixed to local frame of reference, can be manipulated like normal Isgl3dNode (use isTargetCamera = NO) 
	Isgl3dDirector: Fix bug on resume, reset delta time to 0
	Isgl3dRender1/Isgl3dGenericShader: Fix bug with lighting when using views with and without light sources
	Isgl3dBillboardNode: Fix bug when using billboard node in scene graph